--- a/public/css/appbar.css
+++ b/public/css/appbar.css
@@ -1,4 +1,17 @@
 .main-appBar {
     background: rgba(2, 62, 138, 0.61);
     box-shadow: 0px 4px 4px rgba(50, 47, 47, 0.21);
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.appBar-Text-h4{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+    font-family: Roboto Condensed;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    color: white;
 }
