--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,3 +3,30 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: #14213D;
+}
+
+.main-Container {
+    display: flex;
+    flex-direction: column;
+    padding-top: 40px;
+}
+
+.image-Container {
+    display: flex;
+    justify-content: center;
+}
+
+.img-circle {
+    width: 250px;
+    height: 250px;
+    border-radius: 100%;
+    background-color: beige;
+}
+
+.img-circle img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
