--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,7 +4,9 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #14213D;
+    background-position: fixed;
+    background-image: url('../images/backgroundportfolio.png');
+    /*background-color: #14213D;*/
 }
 
 .main-Container {
@@ -19,14 +21,37 @@ body{
 }
 
 .img-circle {
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
     border-radius: 100%;
     background-color: beige;
+    box-shadow: 1px 2px 10px 1px rgba(0,0,0,0.6);
+    transition: 0.6s;
 }
-
+.img-circle  {transition-timing-function: ease-out;}
+.img-circle:hover{
+    border-radius: 5%;
+}
 .img-circle img{
     width: 100%;
     height: 100%;
     object-fit: contain;
+}
+
+
+.card-profile {
+    background-color: rgba(2, 62, 138, 0.98);
+    border-radius: 10px;
+    border-left: 3px solid #0B2A70;
+    border-top: 1px solid #0B2A70;
+    border-right: 1px solid #0B2A70;
+    border-bottom: 1px solid #0B2A70;
+    box-shadow: 1px 2px 10px 1px rgba(0,0,0,0.6);
+    
+}
+.profile-body{
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-bottom: 20px;
+    font-size: 19px;
 }
